Workshop1/Part2/errors.txt
GPAlist.cpp: In function ‘bool sdds::loadStudent()’:
GPAlist.cpp:63:23: error: ‘sortStudent’ was not declared in this scope
           sortStudent();
                       ^
